# discord-is-my-cdn

./: Cargo.toml  README.md
src/: main.rs
