[package]
name = "discord-is-my-cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17.0", features = ["full"]}
reqwest = {version = "0.11.9", features = ["default","json","multipart"]}
clap = {version = "3.1.5", features = ["derive"]}
serde = {version = "1.0.136", features=["derive"]}
serde_json = "1.0.79"
async-recursion = "1.0.0"
futures = "0.3.21"
rand = "0.8.5"